# nextjs-fastapi-postgres-starter

backend/: main.py  models.py  pyproject.toml
backend/backend/messages/: api.py  processing.py  query.py  schema.py
backend/backend/users/: api.py  schema.py
frontend/app/: page.tsx
