[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anurag Anjaria <amanjaria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
